0.13-beta to current

	Made "withicase" and "withrcase" affect how files are sorted before
	comparison, otherwise they might not produce the intended effect.

	Fixed segfault on trying to expand "~username" path prefix with a huge
	length of the user name.

	Fixed user mappings replacing a mapping from Lua in an incomplete way
	which could lead to assertion or some unpredictable behaviour.

	Fixed map menus not listing mappings that accept a selector.

	Fixed handling mouse events in normal and view modes in single pane mode.

	Fixed :hideui not hiding anything on Windows.  Thanks to Ed Pavlov.

	Fixed segfaults on changing sibling directory or previewing directories in
	miller view while global sorting by groups is active.  Patch by filterfalse.

0.12.1 to 0.13-beta (2023-03-17)

	Changed implementation of `:compare grouppaths` to juxtapose only files
	with identical relative paths.  Patch by Alexandr Keyp (a.k.a. IAmKapuze).

	Changed use of `$(filter-out)` in src/Makefile.am to `$(var:from=to)`
	substitution to get rid of a warning on configuration.

	Changed how pthread support is detected by configure script to handle more
	cases.  Thanks to Markus Elfring (a.k.a. elfring).

	Changed configure script to fail if neither perl nor vim is available
	instead of failing to generate tags for Vim-style documentation.  Thanks
	to Sergei Trofimovich (a.k.a. trofi).

	Changed %N macro to also not start a process group for a command.  Thanks
	to Oskar Grunning (a.k.a. sQVe).

	Changed error reporting for some of the :commands such that now their
	failures cause a dialog to appear on sourcing, previously those errors
	were printed only to status bar.

	Added "withicase" and "withrcase" to :compare that force ignoring and
	respecting case respectively on comparing file names and paths.  Thanks to
	Jose Riha (a.k.a. jose1711).

	Added printing stats while in :compare mode.  Patch by Alexandr
	Keyp (a.k.a. IAmKapuze).
